# real-python-solutions

./: README.md
python-basics/: pyproject.toml
python-basics/tests/: test_lists.py  test_poetry_generator.py  test_tuples.py
