[tool.poetry]
name = "python-basics"
version = "0.1.0"
description = ""
authors = ["Christopher Bartling <chris.bartling@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
